--- a/app/app.scss
+++ b/app/app.scss
@@ -19,3 +19,8 @@
   font-family: 'Font Awesome 5 Free', 'fa-regular-400';
   font-weight: 400;
 }
+
+.error {
+  color: red;
+  margin-top: 10px;
+}
